# axum_posts

./: .gitignore  Cargo.toml  README.md
migrations/: 20250623233918_users.down.sql  20250623233918_users.up.sql  20250626204206_posts.down.sql  20250626204206_posts.up.sql
src/: error.rs  lib.rs  main.rs  router.rs
src/db/: mod.rs  posts_db.rs  users.rs  users_db.rs
src/dtos/: auth_dto.rs  mod.rs  post_dto.rs  user_dto.rs
src/handlers/: auth_handler.rs  mod.rs  posts_handler.rs  root_handler.rs  users_handler.rs
src/middlewares/: auth_guard.rs  mod.rs  roles_guard.rs  self_guard.rs
src/services/: auth_service.rs  mod.rs  posts_service.rs  users_service.rs
src/utils/: config.rs  mod.rs  password.rs  token.rs
